2013-09-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/incidents/incident_files.php,
	  include/functions_incidents.php: Setted the time used
	  on a workunit to 0 when uploading a file.
	
2013-09-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/graphs/functions_pchart.php: Fixed an error that
	caused a PHP warning.
	
	* operation/leads/lead_statistics.php: Minor fixes.
	
	* operation/leads/lead_pipeline.php,
	  operation/leads/lead_detail.php,
	  operation/leads/lead.php: Now the lead pipeline shows the
	  data filtered with the search results and this results are
	  keept when navigating through the lead tabs.
	
2013-09-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_incidents.php: Fixed an error in the function
	"attach_incident_file" that caused the upload failed when the
	filename had blank spaces. Now the conflictive characters of the
	filename are replaced.This function now update the column
	'actualizacion' of the incident.
	
	* operation/incidents/incident_files.php: Now the conflictive
	characters of the filename are replaced.
	
2013-09-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/companies/company_detail.php,
	  operation/companies/company_files.php,
	  operation/companies/company_role.php,
	  operation/companies/company_statistics.php: ACL improvements.
	
2013-09-19  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_crm.php: Improved the function "check_crm_acl".
	
	* include/functions_html.php: Added the posibility to create a
	disabled textarea with the function "print_textarea".
	
	* operation/companies/company_detail.php: ACL improvements.
	
2013-09-19  Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php: Added no_process header
	to email sent by incident created y email. 
	* integria_db.sql: Added new avatar as default avatar.

2013-09-19  Alejandro Gallardo <alejandro.gallardo@artica.es>
	